GeoForge world_data.json 追加

--- a/src/シナリオ.md
+++ b/src/シナリオ.md
@@ -368,3 +368,265 @@ PCたちが町に戻ると、ルディと共に任務の結果を報告します
 彼からは、この辺境の厳しい環境で生き抜いてきた、確かな実力と経験を感じさせます。
 ```
 
+{
+  "index": 6377,
+  "x": 52,
+  "y": 44,
+  "properties": {
+    "elevation": 363,
+    "temperature": 22.74,
+    "precipitation_mm": 846.02,
+    "precipitation": 0.28,
+    "climate": 24.92,
+    "climateZone": "熱帯草原気候",
+    "vegetation": "草原",
+    "terrainType": "平地",
+    "isAlluvial": false,
+    "hasSnow": false,
+    "manaValue": 0,
+    "manaRank": "D",
+    "resourceRank": "晶",
+    "agriPotential": 0.87,
+    "forestPotential": 0.11,
+    "miningPotential": 0,
+    "fishingPotential": 0.6,
+    "huntingPotential": 0.2,
+    "pastoralPotential": 0.4,
+    "livestockPotential": 0.83,
+    "cultivatedArea": 221.31,
+    "habitability": 47.94,
+    "population": 774,
+    "settlement": "村",
+    "industry": {
+      "primary": {
+        "雑穀": 134.864,
+        "果物": 7.16,
+        "木材": 21.98,
+        "狩猟肉": 8.178,
+        "薬草": 0.007,
+        "鉱石": 0.002,
+        "鉄": 0,
+        "魚介類": 1013.406,
+        "牧畜肉": 235.844,
+        "乳製品": 294.805,
+        "羊毛": 147.402,
+        "家畜肉": 1535.657,
+        "高級肉": 309.943
+      },
+      "secondary": {
+        "武具・道具": 16.488,
+        "織物": 37.152,
+        "ポーション・魔導具": 0.014,
+        "酒(穀物)": 6.743,
+        "酒(果実)": 1.002,
+        "建築": 5.573
+      },
+      "tertiary": {
+        "商業・交易": 55.728,
+        "宿屋・酒場": 8.916,
+        "医療・教会": 4.955,
+        "運送・交通": 3.715
+      },
+      "quaternary": {},
+      "quinary": {}
+    },
+    "production": {
+      "雑穀": 134.864,
+      "果物": 7.16,
+      "木材": 21.98,
+      "狩猟肉": 8.178,
+      "薬草": 0.007,
+      "鉱石": 0.002,
+      "鉄": 0,
+      "魚介類": 1013.406,
+      "牧畜肉": 235.844,
+      "乳製品": 294.805,
+      "羊毛": 147.402,
+      "家畜肉": 1535.657,
+      "高級肉": 309.943
+    },
+    "surplus": {
+      "食料": 3075.1145110707125
+    },
+    "shortage": {
+      "食料": 0
+    },
+    "nationId": 1,
+    "parentHexId": 6261,
+    "territoryId": 5109,
+    "distanceToParent": 14.000000000000016,
+    "travelDaysToParent": 0.40816326530612246,
+    "roadLevel": 3,
+    "roadUsage": 92.84,
+    "roadLoss": 0,
+    "demographics": {
+      "農民": 269,
+      "漁師": 46,
+      "鉱夫": 0,
+      "木こり": 8,
+      "畜夫": 95,
+      "職人": 77,
+      "商人": 38,
+      "学者": 15,
+      "騎士": 1,
+      "正規兵": 10,
+      "衛兵・自警団": 12,
+      "官僚": 7,
+      "聖職者": 15,
+      "スラム": 0,
+      "孤児": 15
+    },
+    "facilities": [
+      {
+        "name": "集会所",
+        "count": 1,
+        "level": 1
+      },
+      {
+        "name": "市場",
+        "count": 1,
+        "level": 1
+      },
+      {
+        "name": "渡し場",
+        "count": 1,
+        "level": 1
+      }
+    ],
+    "landUse": {
+      "river": 0,
+      "desert": 0,
+      "barren": 0,
+      "grassland": 0.89,
+      "forest": 0.11
+    },
+    "isWater": false,
+    "flow": 0,
+    "ridgeFlow": 0,
+    "isCoastal": false,
+    "isLakeside": true,
+    "characteristics": [
+      "特産品: 高級肉",
+      "特産品: 海産物"
+    ],
+    "logistics": {
+      "wagons": 10,
+      "animals": {
+        "馬": 2,
+        "牛": 5,
+        "水牛": 18
+      },
+      "ships": {
+        "小舟・漁船": 12
+      },
+      "drivers": 14,
+      "transportCapacity": {
+        "water": 12,
+        "land": 10.75,
+        "total": 22.75
+      }
+    },
+    "selfSufficiencyRate": 1,
+    "netShortage": 0,
+    "priceIndex": 0.8,
+    "happiness": 60,
+    "livingConditions": {
+      "prices": {
+        "food": 0.8,
+        "necessities": 0.8,
+        "luxuries": 0.96,
+        "high_luxuries": 1.2000000000000002,
+        "field_gear": 1.81
+      },
+      "happiness": 60,
+      "security": 100,
+      "poverty": 0,
+      "hunger": 0.009689922480620155,
+      "luxury": 1,
+      "tax": 7740,
+      "householdIncome": 224.76227390180878,
+      "monthlyTax": 67.42868217054263,
+      "perCapitaIncome": 43.223514211886304,
+      "livingCost": 20,
+      "monthlyDemand": 12.9,
+      "monthlySupply": 269.1595
+    },
+    "shadingValue": 112
+  },
+  "isCoastal": false,
+  "isLakeside": true,
+  "neighbors": [
+    {
+      "index": 6262,
+      "x": 52,
+      "y": 54,
+      "isWater": true,
+      "elevation": 352,
+      "terrainType": "水域",
+      "vegetation": "湖沼",
+      "isAlluvial": false,
+      "hasSnow": false,
+      "settlement": null
+    },
+    {
+      "index": 6492,
+      "x": 52,
+      "y": 56,
+      "isWater": false,
+      "elevation": 464,
+      "terrainType": "平地",
+      "vegetation": "草原",
+      "isAlluvial": false,
+      "hasSnow": false,
+      "settlement": null
+    },
+    {
+      "index": 6263,
+      "x": 53,
+      "y": 54,
+      "isWater": false,
+      "elevation": 361,
+      "terrainType": "平地",
+      "vegetation": "草原",
+      "isAlluvial": false,
+      "hasSnow": false,
+      "settlement": "村"
+    },
+    {
+      "index": 6378,
+      "x": 53,
+      "y": 55,
+      "isWater": false,
+      "elevation": 364,
+      "terrainType": "平地",
+      "vegetation": "草原",
+      "isAlluvial": false,
+      "hasSnow": false,
+      "settlement": null
+    },
+    {
+      "index": 6376,
+      "x": 51,
+      "y": 55,
+      "isWater": false,
+      "elevation": 450,
+      "terrainType": "平地",
+      "vegetation": "草原",
+      "isAlluvial": false,
+      "hasSnow": false,
+      "settlement": null
+    },
+    {
+      "index": 6261,
+      "x": 51,
+      "y": 54,
+      "isWater": false,
+      "elevation": 424,
+      "terrainType": "平地",
+      "vegetation": "草原",
+      "isAlluvial": false,
+      "hasSnow": false,
+      "settlement": "町"
+    }
+  ]
+}
