GeoForge world_data.json 追加

--- a/src/仕様.md
+++ b/src/仕様.md
@@ -389,3 +389,341 @@ const result = allocateVegetation({
 console.log(result);
 // 出力例: { water:120, temperateForest:1220, grassland:2150, ... }
 ```
+
+```json
+{
+  "index": 5906,
+  "x": 41,
+  "y": 48,
+  "properties": {
+    "elevation": 333,
+    "temperature": 22.43,
+    "precipitation_mm": 676.07,
+    "precipitation": 0.23,
+    "climate": 24.43,
+    "climateZone": "熱帯草原気候",
+    "vegetation": "草原",
+    "terrainType": "平地",
+    "flow": 2,
+    "isAlluvial": true,
+    "hasSnow": false,
+    "manaValue": 0.11,
+    "manaRank": "C",
+    "resourceRank": "金",
+    "agriPotential": 1,
+    "forestPotential": 0.2503472222222222,
+    "miningPotential": 0.69213182765748,
+    "fishingPotential": 0.7414213562373095,
+    "huntingPotential": 0,
+    "pastoralPotential": 0.6,
+    "livestockPotential": 1,
+    "cultivatedArea": 298.65,
+    "habitability": 60.61,
+    "population": 3434,
+    "settlement": "町",
+    "industry": {
+      "primary": {
+        "稲": 351.42,
+        "雑穀": 42.301,
+        "果物": 16.722,
+        "木材": 386.183,
+        "狩猟肉": 0,
+        "薬草": 12.527,
+        "鉱石": 494.846,
+        "鉄": 123.711,
+        "魚介類": 2757.591,
+        "牧畜肉": 963.166,
+        "乳製品": 1203.957,
+        "羊毛": 601.979,
+        "家畜肉": 4013.19,
+        "高級肉": 668.865
+      },
+      "secondary": {
+        "武具・道具": 480.76,
+        "織物": 360.57,
+        "ポーション・魔導具": 27.816,
+        "酒(穀物)": 2.115,
+        "酒(果実)": 2.341,
+        "建築": 57.09
+      },
+      "tertiary": {
+        "商業・交易": 811.282,
+        "宿屋・酒場": 129.805,
+        "医療・教会": 80.063,
+        "運送・交通": 54.085
+      },
+      "quaternary": {
+        "魔法研究": 158.985,
+        "学問・歴史": 216.342,
+        "戦略・軍事": 14.423,
+        "情報・予言": 8.006
+      },
+      "quinary": {
+        "行政・税収": 480.76,
+        "ギルド統括": 240.38,
+        "芸術・文化": 10.675
+      }
+    },
+    "production": {
+      "稲": 351.42,
+      "雑穀": 42.301,
+      "果物": 16.722,
+      "木材": 386.183,
+      "狩猟肉": 0,
+      "薬草": 12.527,
+      "鉱石": 494.846,
+      "鉄": 123.711,
+      "魚介類": 2757.591,
+      "牧畜肉": 963.166,
+      "乳製品": 1203.957,
+      "羊毛": 601.979,
+      "家畜肉": 4013.19,
+      "高級肉": 668.865
+    },
+    "surplus": {
+      "食料": 8592.866747821243
+    },
+    "shortage": {
+      "食料": 0
+    },
+    "nationId": 2,
+    "parentHexId": 5004,
+    "territoryId": 3029,
+    "distanceToParent": 307.0972061768065,
+    "travelDaysToParent": 9.880142533203758,
+    "roadLevel": 3,
+    "roadUsage": 47.81,
+    "roadLoss": 0,
+    "demographics": {
+      "農民": 1373,
+      "漁師": 254,
+      "鉱夫": 237,
+      "木こり": 85,
+      "畜夫": 549,
+      "職人": 343,
+      "商人": 171,
+      "学者": 68,
+      "騎士": 5,
+      "正規兵": 46,
+      "衛兵・自警団": 52,
+      "官僚": 34,
+      "聖職者": 68,
+      "スラム": 0,
+      "孤児": 68,
+      "水夫": 30
+    },
+    "facilities": [
+      {
+        "name": "集会所",
+        "count": 1,
+        "level": 1
+      },
+      {
+        "name": "市場",
+        "count": 2,
+        "level": 1
+      },
+      {
+        "name": "宿屋",
+        "count": 4,
+        "level": 1
+      },
+      {
+        "name": "鍛冶屋",
+        "count": 5,
+        "level": 1
+      },
+      {
+        "name": "機織り小屋",
+        "count": 4,
+        "level": 1
+      },
+      {
+        "name": "桟橋",
+        "count": 2,
+        "level": 1
+      },
+      {
+        "name": "魔導塔",
+        "count": 1,
+        "level": 1
+      },
+      {
+        "name": "図書館",
+        "count": 1,
+        "level": 1
+      }
+    ],
+    "landUse": {
+      "river": 0.0023094688221709007,
+      "desert": 0,
+      "barren": 0.040625,
+      "grassland": 0.7090277777777778,
+      "forest": 0.2503472222222222
+    },
+    "isWater": false,
+    "ridgeFlow": 0,
+    "isCoastal": false,
+    "isLakeside": true,
+    "vegetationAreas": {
+      "desert": 0,
+      "wasteland": 351,
+      "grassland": 6126,
+      "wetland": 0,
+      "temperateForest": 2163,
+      "subarcticForest": 0,
+      "tropicalRainforest": 0,
+      "alpine": 0,
+      "tundra": 0,
+      "savanna": 0,
+      "steppe": 0,
+      "coastal": 0,
+      "water": 20
+    },
+    "ships": {
+      "湖沼用ボート": 47,
+      "湖沼交易船": 10
+    },
+    "characteristics": [
+      "特産品: 高級肉",
+      "特産品: 海産物",
+      "特産品: 織物",
+      "戦略: 魔導研究"
+    ],
+    "logistics": {
+      "wagons": 48,
+      "animals": {
+        "馬": 12,
+        "牛": 25,
+        "水牛": 88
+      },
+      "ships": {
+        "湖沼用ボート": 47,
+        "湖沼交易船": 10
+      },
+      "personnel": {
+        "drivers": 68,
+        "skippers": 10,
+        "crew": 20
+      },
+      "transportCapacity": {
+        "water": 73.5,
+        "land": 52.35,
+        "total": 125.85
+      }
+    },
+    "landUsage": 47.81,
+    "waterUsage": 0,
+    "roadEdges": [
+      0,
+      2,
+      3,
+      2,
+      0,
+      0
+    ],
+    "selfSufficiencyRate": 1,
+    "netShortage": 0,
+    "priceIndex": 0.8,
+    "happiness": 65,
+    "livingConditions": {
+      "prices": {
+        "food": 0.8,
+        "necessities": 0.8,
+        "luxuries": 0.96,
+        "high_luxuries": 1.2000000000000002,
+        "field_gear": 0.82
+      },
+      "happiness": 65,
+      "security": 100,
+      "poverty": 0,
+      "hunger": 0.009900990099009901,
+      "luxury": 0.6818093574063288,
+      "tax": 34340,
+      "householdIncome": 242.18054746651134,
+      "monthlyTax": 60.545136866627836,
+      "perCapitaIncome": 50.454280722189864,
+      "livingCost": 30,
+      "monthlyDemand": 62.95666666666667,
+      "monthlySupply": 779.0289166666666
+    },
+    "shadingValue": 49
+  },
+  "isCoastal": false,
+  "isLakeside": true,
+  "neighbors": [
+    {
+      "index": 5791,
+      "x": 41,
+      "y": 50,
+      "isWater": true,
+      "elevation": 316,
+      "terrainType": "水域",
+      "vegetation": "湖沼",
+      "isAlluvial": false,
+      "hasSnow": false,
+      "settlement": null
+    },
+    {
+      "index": 6021,
+      "x": 41,
+      "y": 52,
+      "isWater": false,
+      "elevation": 365,
+      "terrainType": "平地",
+      "vegetation": "草原",
+      "isAlluvial": true,
+      "hasSnow": false,
+      "settlement": "村"
+    },
+    {
+      "index": 5907,
+      "x": 42,
+      "y": 51,
+      "isWater": false,
+      "elevation": 354,
+      "terrainType": "平地",
+      "vegetation": "草原",
+      "isAlluvial": false,
+      "hasSnow": false,
+      "settlement": "町"
+    },
+    {
+      "index": 6022,
+      "x": 42,
+      "y": 52,
+      "isWater": false,
+      "elevation": 377,
+      "terrainType": "平地",
+      "vegetation": "草原",
+      "isAlluvial": false,
+      "hasSnow": false,
+      "settlement": null
+    },
+    {
+      "index": 6020,
+      "x": 40,
+      "y": 52,
+      "isWater": false,
+      "elevation": 373,
+      "terrainType": "平地",
+      "vegetation": "草原",
+      "isAlluvial": false,
+      "hasSnow": false,
+      "settlement": null
+    },
+    {
+      "index": 5905,
+      "x": 40,
+      "y": 51,
+      "isWater": false,
+      "elevation": 345,
+      "terrainType": "平地",
+      "vegetation": "草原",
+      "isAlluvial": false,
+      "hasSnow": false,
+      "settlement": "町"
+    }
+  ]
+}
+```
