GeoForge ワールドマップ対応

--- a/src/仕様.md
+++ b/src/仕様.md
@@ -417,23 +417,27 @@ function classifyClimate(T_mean, P_annual, H_m) {
 ## 4. 河川の生成
 - 水源発生確率から水源地を決定し、低いほうへ河川を繋げていく。
 - 海に出るか、それ以上低い場所がなくなったら終了する。
+- 陸上でそれ以上低い場所がない場合、当該ヘックスを湖沼とする。
 
   **4.1. 河川データ構造**
+* わかりやすさのためにキーを日本語で表記しています。
 ```json
 {
-  "河川":{
-    "流入":[ // 複数方向からの流入あり
-      {
-        "方向":0, // 0:水源
-        "水量":0.5, // 水源における初期値 = 保水力
-        "川幅":1 // 描画のために必要
-      },{
-        "方向":2,
-        "水量":1.0,
-        "川幅":2
-      }
-    ],
-    "流出方向":5
+  "各ヘックス":{
+    "河川":{
+      "流入":[ // 複数方向からの流入あり
+        {
+          "方向":0, // 0:水源
+          "水量":0.5, // 水源における初期値 = 保水力
+          "川幅":1 // 描画のために必要
+        },{
+          "方向":2,
+          "水量":1.0,
+          "川幅":2
+        }
+      ],
+      "流出方向":5
+    }
   }
 }
 ```
